[package]
name = "dioxus-ui-demo"
version = "0.1.0"
authors = ["one"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.41.1"
async-trait = "0.1.83"
dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
